// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`documentRpcClients 1`] = `
"/** ModuleAccountBalance */
const request: QueryModuleAccountBalanceRequest;
const result = await osmosis.claim.v1beta1.moduleAccountBalance(request);

/** Params */
const request: QueryParamsRequest;
const result = await osmosis.claim.v1beta1.params(request);

/** ClaimRecord */
const request: QueryClaimRecordRequest;
const result = await osmosis.claim.v1beta1.claimRecord(request);

/** ClaimableForAction */
const request: QueryClaimableForActionRequest;
const result = await osmosis.claim.v1beta1.claimableForAction(request);

/** TotalClaimable */
const request: QueryTotalClaimableRequest;
const result = await osmosis.claim.v1beta1.totalClaimable(request);

/** EpochInfos provide running epochInfos */
const request: QueryEpochsInfoRequest;
const result = await osmosis.epochs.v1beta1.epochInfos(request);

/** CurrentEpoch provide current epoch of specified identifier */
const request: QueryCurrentEpochRequest;
const result = await osmosis.epochs.v1beta1.currentEpoch(request);

/** Pools */
const request: QueryPoolsRequest;
const result = await osmosis.gamm.v1beta1.pools(request);

/** NumPools */
const request: QueryNumPoolsRequest;
const result = await osmosis.gamm.v1beta1.numPools(request);

/** TotalLiquidity */
const request: QueryTotalLiquidityRequest;
const result = await osmosis.gamm.v1beta1.totalLiquidity(request);

/** Per Pool gRPC Endpoints */
const request: QueryPoolRequest;
const result = await osmosis.gamm.v1beta1.pool(request);

/** PoolParams */
const request: QueryPoolParamsRequest;
const result = await osmosis.gamm.v1beta1.poolParams(request);

/** TotalPoolLiquidity */
const request: QueryTotalPoolLiquidityRequest;
const result = await osmosis.gamm.v1beta1.totalPoolLiquidity(request);

/** TotalShares */
const request: QueryTotalSharesRequest;
const result = await osmosis.gamm.v1beta1.totalShares(request);

/**
 * SpotPrice defines a gRPC query handler that returns the spot price given
 * a base denomination and a quote denomination.
 */
const request: QuerySpotPriceRequest;
const result = await osmosis.gamm.v1beta1.spotPrice(request);

/** Estimate the swap. */
const request: QuerySwapExactAmountInRequest;
const result = await osmosis.gamm.v1beta1.estimateSwapExactAmountIn(request);

/** EstimateSwapExactAmountOut */
const request: QuerySwapExactAmountOutRequest;
const result = await osmosis.gamm.v1beta1.estimateSwapExactAmountOut(request);

/** returns coins that is going to be distributed */
const request: ModuleToDistributeCoinsRequest;
const result = await osmosis.incentives.moduleToDistributeCoins(request);

/** returns coins that are distributed by module so far */
const request: ModuleDistributedCoinsRequest;
const result = await osmosis.incentives.moduleDistributedCoins(request);

/** returns Gauge by id */
const request: GaugeByIDRequest;
const result = await osmosis.incentives.gaugeByID(request);

/** returns gauges both upcoming and active */
const request: GaugesRequest;
const result = await osmosis.incentives.gauges(request);

/** returns active gauges */
const request: ActiveGaugesRequest;
const result = await osmosis.incentives.activeGauges(request);

/** returns active gauges per denom */
const request: ActiveGaugesPerDenomRequest;
const result = await osmosis.incentives.activeGaugesPerDenom(request);

/** returns scheduled gauges */
const request: UpcomingGaugesRequest;
const result = await osmosis.incentives.upcomingGauges(request);

/** returns scheduled gauges per denom */
const request: UpcomingGaugesPerDenomRequest;
const result = await osmosis.incentives.upcomingGaugesPerDenom(request);

/**
 * RewardsEst returns an estimate of the rewards at a future specific time.
 * The querier either provides an address or a set of locks
 * for which they want to find the associated rewards.
 */
const request: RewardsEstRequest;
const result = await osmosis.incentives.rewardsEst(request);

/** returns lockable durations that are valid to give incentives */
const request: QueryLockableDurationsRequest;
const result = await osmosis.incentives.lockableDurations(request);

/** Return full balance of the module */
const request: ModuleBalanceRequest;
const result = await osmosis.lockup.moduleBalance(request);

/** Return locked balance of the module */
const request: ModuleLockedAmountRequest;
const result = await osmosis.lockup.moduleLockedAmount(request);

/** Returns unlockable coins which are not withdrawn yet */
const request: AccountUnlockableCoinsRequest;
const result = await osmosis.lockup.accountUnlockableCoins(request);

/** Returns unlocking coins */
const request: AccountUnlockingCoinsRequest;
const result = await osmosis.lockup.accountUnlockingCoins(request);

/** Return a locked coins that can't be withdrawn */
const request: AccountLockedCoinsRequest;
const result = await osmosis.lockup.accountLockedCoins(request);

/** Returns locked records of an account with unlock time beyond timestamp */
const request: AccountLockedPastTimeRequest;
const result = await osmosis.lockup.accountLockedPastTime(request);

/**
 * Returns locked records of an account with unlock time beyond timestamp
 * excluding tokens started unlocking
 */
const request: AccountLockedPastTimeNotUnlockingOnlyRequest;
const result = await osmosis.lockup.accountLockedPastTimeNotUnlockingOnly(request);

/** Returns unlocked records with unlock time before timestamp */
const request: AccountUnlockedBeforeTimeRequest;
const result = await osmosis.lockup.accountUnlockedBeforeTime(request);

/** Returns lock records by address, timestamp, denom */
const request: AccountLockedPastTimeDenomRequest;
const result = await osmosis.lockup.accountLockedPastTimeDenom(request);

/** Returns total locked per denom with longer past given time */
const request: LockedDenomRequest;
const result = await osmosis.lockup.lockedDenom(request);

/** Returns lock record by id */
const request: LockedRequest;
const result = await osmosis.lockup.lockedByID(request);

/** Returns synthetic lockups by native lockup id */
const request: SyntheticLockupsByLockupIDRequest;
const result = await osmosis.lockup.syntheticLockupsByLockupID(request);

/** Returns account locked records with longer duration */
const request: AccountLockedLongerDurationRequest;
const result = await osmosis.lockup.accountLockedLongerDuration(request);

/** Returns account locked records with a specific duration */
const request: AccountLockedDurationRequest;
const result = await osmosis.lockup.accountLockedDuration(request);

/**
 * Returns account locked records with longer duration excluding tokens
 * started unlocking
 */
const request: AccountLockedLongerDurationNotUnlockingOnlyRequest;
const result = await osmosis.lockup.accountLockedLongerDurationNotUnlockingOnly(request);

/** Returns account's locked records for a denom with longer duration */
const request: AccountLockedLongerDurationDenomRequest;
const result = await osmosis.lockup.accountLockedLongerDurationDenom(request);

/** Params returns the total set of minting parameters. */
const request: QueryParamsRequest;
const result = await osmosis.mint.v1beta1.params(request);

/** EpochProvisions current minting epoch provisions value. */
const request: QueryEpochProvisionsRequest;
const result = await osmosis.mint.v1beta1.epochProvisions(request);

/** GaugeIds takes the pool id and returns the matching gauge ids and durations */
const request: QueryGaugeIdsRequest;
const result = await osmosis.poolincentives.v1beta1.gaugeIds(request);

/** DistrInfo */
const request: QueryDistrInfoRequest;
const result = await osmosis.poolincentives.v1beta1.distrInfo(request);

/** Params */
const request: QueryParamsRequest;
const result = await osmosis.poolincentives.v1beta1.params(request);

/** LockableDurations */
const request: QueryLockableDurationsRequest;
const result = await osmosis.poolincentives.v1beta1.lockableDurations(request);

/** IncentivizedPools */
const request: QueryIncentivizedPoolsRequest;
const result = await osmosis.poolincentives.v1beta1.incentivizedPools(request);

/** ExternalIncentiveGauges */
const request: QueryExternalIncentiveGaugesRequest;
const result = await osmosis.poolincentives.v1beta1.externalIncentiveGauges(request);

/** Params returns the total set of minting parameters. */
const request: QueryParamsRequest;
const result = await osmosis.superfluid.params(request);

/** Returns superfluid asset type */
const request: AssetTypeRequest;
const result = await osmosis.superfluid.assetType(request);

/** Returns all superfluid asset types */
const request: AllAssetsRequest;
const result = await osmosis.superfluid.allAssets(request);

/** Returns superfluid asset Multiplier */
const request: AssetMultiplierRequest;
const result = await osmosis.superfluid.assetMultiplier(request);

/** Returns all superfluid intermediary account */
const request: AllIntermediaryAccountsRequest;
const result = await osmosis.superfluid.allIntermediaryAccounts(request);

/** Returns intermediary account connected to a superfluid staked lock by id */
const request: ConnectedIntermediaryAccountRequest;
const result = await osmosis.superfluid.connectedIntermediaryAccount(request);

/**
 * Returns the total amount of osmo superfluidly staked
 * response denominated in uosmo
 */
const request: TotalSuperfluidDelegationsRequest;
const result = await osmosis.superfluid.totalSuperfluidDelegations(request);

/**
 * Returns the coins superfluid delegated for a delegator, validator, denom
 * triplet
 */
const request: SuperfluidDelegationAmountRequest;
const result = await osmosis.superfluid.superfluidDelegationAmount(request);

/** Returns all the superfluid poistions for a specific delegator */
const request: SuperfluidDelegationsByDelegatorRequest;
const result = await osmosis.superfluid.superfluidDelegationsByDelegator(request);

/** SuperfluidUndelegationsByDelegator */
const request: SuperfluidUndelegationsByDelegatorRequest;
const result = await osmosis.superfluid.superfluidUndelegationsByDelegator(request);

/**
 * Returns all the superfluid positions of a specific denom delegated to one
 * validator
 */
const request: SuperfluidDelegationsByValidatorDenomRequest;
const result = await osmosis.superfluid.superfluidDelegationsByValidatorDenom(request);

/**
 * Returns the amount of a specific denom delegated to a specific validator
 * This is labeled an estimate, because the way it calculates the amount can
 * lead rounding errors from the true delegated amount
 */
const request: EstimateSuperfluidDelegatedAmountByValidatorDenomRequest;
const result = await osmosis.superfluid.estimateSuperfluidDelegatedAmountByValidatorDenom(request);

/** Params returns the total set of minting parameters. */
const request: QueryParamsRequest;
const result = await osmosis.tokenfactory.v1beta1.params(request);

/** DenomAuthorityMetadata */
const request: QueryDenomAuthorityMetadataRequest;
const result = await osmosis.tokenfactory.v1beta1.denomAuthorityMetadata(request);

/** DenomsFromCreator */
const request: QueryDenomsFromCreatorRequest;
const result = await osmosis.tokenfactory.v1beta1.denomsFromCreator(request);

/**
 * FeeTokens returns a list of all the whitelisted fee tokens and their
 * corresponding pools It does not include the BaseDenom, which has its own
 * query endpoint
 */
const request: QueryFeeTokensRequest;
const result = await osmosis.txfees.v1beta1.feeTokens(request);

/** DenomSpotPrice */
const request: QueryDenomSpotPriceRequest;
const result = await osmosis.txfees.v1beta1.denomSpotPrice(request);

/** DenomPoolId */
const request: QueryDenomPoolIdRequest;
const result = await osmosis.txfees.v1beta1.denomPoolId(request);

/** BaseDenom */
const request: QueryBaseDenomRequest;
const result = await osmosis.txfees.v1beta1.baseDenom(request);"
`;

exports[`documentRpcClientsReadme 1`] = `
"
## Table of Contents

[\`osmosis.claim.v1beta1.moduleAccountBalance()\` RPC](#osmosisclaimv1beta1moduleaccountbalance-rpc)
[\`osmosis.claim.v1beta1.params()\` RPC](#osmosisclaimv1beta1params-rpc)
[\`osmosis.claim.v1beta1.claimRecord()\` RPC](#osmosisclaimv1beta1claimrecord-rpc)
[\`osmosis.claim.v1beta1.claimableForAction()\` RPC](#osmosisclaimv1beta1claimableforaction-rpc)
[\`osmosis.claim.v1beta1.totalClaimable()\` RPC](#osmosisclaimv1beta1totalclaimable-rpc)
[\`osmosis.epochs.v1beta1.epochInfos()\` RPC](#osmosisepochsv1beta1epochinfos-rpc)
[\`osmosis.epochs.v1beta1.currentEpoch()\` RPC](#osmosisepochsv1beta1currentepoch-rpc)
[\`osmosis.gamm.v1beta1.pools()\` RPC](#osmosisgammv1beta1pools-rpc)
[\`osmosis.gamm.v1beta1.numPools()\` RPC](#osmosisgammv1beta1numpools-rpc)
[\`osmosis.gamm.v1beta1.totalLiquidity()\` RPC](#osmosisgammv1beta1totalliquidity-rpc)
[\`osmosis.gamm.v1beta1.pool()\` RPC](#osmosisgammv1beta1pool-rpc)
[\`osmosis.gamm.v1beta1.poolParams()\` RPC](#osmosisgammv1beta1poolparams-rpc)
[\`osmosis.gamm.v1beta1.totalPoolLiquidity()\` RPC](#osmosisgammv1beta1totalpoolliquidity-rpc)
[\`osmosis.gamm.v1beta1.totalShares()\` RPC](#osmosisgammv1beta1totalshares-rpc)
[\`osmosis.gamm.v1beta1.spotPrice()\` RPC](#osmosisgammv1beta1spotprice-rpc)
[\`osmosis.gamm.v1beta1.estimateSwapExactAmountIn()\` RPC](#osmosisgammv1beta1estimateswapexactamountin-rpc)
[\`osmosis.gamm.v1beta1.estimateSwapExactAmountOut()\` RPC](#osmosisgammv1beta1estimateswapexactamountout-rpc)
[\`osmosis.incentives.moduleToDistributeCoins()\` RPC](#osmosisincentivesmoduletodistributecoins-rpc)
[\`osmosis.incentives.moduleDistributedCoins()\` RPC](#osmosisincentivesmoduledistributedcoins-rpc)
[\`osmosis.incentives.gaugeByID()\` RPC](#osmosisincentivesgaugebyid-rpc)
[\`osmosis.incentives.gauges()\` RPC](#osmosisincentivesgauges-rpc)
[\`osmosis.incentives.activeGauges()\` RPC](#osmosisincentivesactivegauges-rpc)
[\`osmosis.incentives.activeGaugesPerDenom()\` RPC](#osmosisincentivesactivegaugesperdenom-rpc)
[\`osmosis.incentives.upcomingGauges()\` RPC](#osmosisincentivesupcominggauges-rpc)
[\`osmosis.incentives.upcomingGaugesPerDenom()\` RPC](#osmosisincentivesupcominggaugesperdenom-rpc)
[\`osmosis.incentives.rewardsEst()\` RPC](#osmosisincentivesrewardsest-rpc)
[\`osmosis.incentives.lockableDurations()\` RPC](#osmosisincentiveslockabledurations-rpc)
[\`osmosis.lockup.moduleBalance()\` RPC](#osmosislockupmodulebalance-rpc)
[\`osmosis.lockup.moduleLockedAmount()\` RPC](#osmosislockupmodulelockedamount-rpc)
[\`osmosis.lockup.accountUnlockableCoins()\` RPC](#osmosislockupaccountunlockablecoins-rpc)
[\`osmosis.lockup.accountUnlockingCoins()\` RPC](#osmosislockupaccountunlockingcoins-rpc)
[\`osmosis.lockup.accountLockedCoins()\` RPC](#osmosislockupaccountlockedcoins-rpc)
[\`osmosis.lockup.accountLockedPastTime()\` RPC](#osmosislockupaccountlockedpasttime-rpc)
[\`osmosis.lockup.accountLockedPastTimeNotUnlockingOnly()\` RPC](#osmosislockupaccountlockedpasttimenotunlockingonly-rpc)
[\`osmosis.lockup.accountUnlockedBeforeTime()\` RPC](#osmosislockupaccountunlockedbeforetime-rpc)
[\`osmosis.lockup.accountLockedPastTimeDenom()\` RPC](#osmosislockupaccountlockedpasttimedenom-rpc)
[\`osmosis.lockup.lockedDenom()\` RPC](#osmosislockuplockeddenom-rpc)
[\`osmosis.lockup.lockedByID()\` RPC](#osmosislockuplockedbyid-rpc)
[\`osmosis.lockup.syntheticLockupsByLockupID()\` RPC](#osmosislockupsyntheticlockupsbylockupid-rpc)
[\`osmosis.lockup.accountLockedLongerDuration()\` RPC](#osmosislockupaccountlockedlongerduration-rpc)
[\`osmosis.lockup.accountLockedDuration()\` RPC](#osmosislockupaccountlockedduration-rpc)
[\`osmosis.lockup.accountLockedLongerDurationNotUnlockingOnly()\` RPC](#osmosislockupaccountlockedlongerdurationnotunlockingonly-rpc)
[\`osmosis.lockup.accountLockedLongerDurationDenom()\` RPC](#osmosislockupaccountlockedlongerdurationdenom-rpc)
[\`osmosis.mint.v1beta1.params()\` RPC](#osmosismintv1beta1params-rpc)
[\`osmosis.mint.v1beta1.epochProvisions()\` RPC](#osmosismintv1beta1epochprovisions-rpc)
[\`osmosis.poolincentives.v1beta1.gaugeIds()\` RPC](#osmosispoolincentivesv1beta1gaugeids-rpc)
[\`osmosis.poolincentives.v1beta1.distrInfo()\` RPC](#osmosispoolincentivesv1beta1distrinfo-rpc)
[\`osmosis.poolincentives.v1beta1.params()\` RPC](#osmosispoolincentivesv1beta1params-rpc)
[\`osmosis.poolincentives.v1beta1.lockableDurations()\` RPC](#osmosispoolincentivesv1beta1lockabledurations-rpc)
[\`osmosis.poolincentives.v1beta1.incentivizedPools()\` RPC](#osmosispoolincentivesv1beta1incentivizedpools-rpc)
[\`osmosis.poolincentives.v1beta1.externalIncentiveGauges()\` RPC](#osmosispoolincentivesv1beta1externalincentivegauges-rpc)
[\`osmosis.superfluid.params()\` RPC](#osmosissuperfluidparams-rpc)
[\`osmosis.superfluid.assetType()\` RPC](#osmosissuperfluidassettype-rpc)
[\`osmosis.superfluid.allAssets()\` RPC](#osmosissuperfluidallassets-rpc)
[\`osmosis.superfluid.assetMultiplier()\` RPC](#osmosissuperfluidassetmultiplier-rpc)
[\`osmosis.superfluid.allIntermediaryAccounts()\` RPC](#osmosissuperfluidallintermediaryaccounts-rpc)
[\`osmosis.superfluid.connectedIntermediaryAccount()\` RPC](#osmosissuperfluidconnectedintermediaryaccount-rpc)
[\`osmosis.superfluid.totalSuperfluidDelegations()\` RPC](#osmosissuperfluidtotalsuperfluiddelegations-rpc)
[\`osmosis.superfluid.superfluidDelegationAmount()\` RPC](#osmosissuperfluidsuperfluiddelegationamount-rpc)
[\`osmosis.superfluid.superfluidDelegationsByDelegator()\` RPC](#osmosissuperfluidsuperfluiddelegationsbydelegator-rpc)
[\`osmosis.superfluid.superfluidUndelegationsByDelegator()\` RPC](#osmosissuperfluidsuperfluidundelegationsbydelegator-rpc)
[\`osmosis.superfluid.superfluidDelegationsByValidatorDenom()\` RPC](#osmosissuperfluidsuperfluiddelegationsbyvalidatordenom-rpc)
[\`osmosis.superfluid.estimateSuperfluidDelegatedAmountByValidatorDenom()\` RPC](#osmosissuperfluidestimatesuperfluiddelegatedamountbyvalidatordenom-rpc)
[\`osmosis.tokenfactory.v1beta1.params()\` RPC](#osmosistokenfactoryv1beta1params-rpc)
[\`osmosis.tokenfactory.v1beta1.denomAuthorityMetadata()\` RPC](#osmosistokenfactoryv1beta1denomauthoritymetadata-rpc)
[\`osmosis.tokenfactory.v1beta1.denomsFromCreator()\` RPC](#osmosistokenfactoryv1beta1denomsfromcreator-rpc)
[\`osmosis.txfees.v1beta1.feeTokens()\` RPC](#osmosistxfeesv1beta1feetokens-rpc)
[\`osmosis.txfees.v1beta1.denomSpotPrice()\` RPC](#osmosistxfeesv1beta1denomspotprice-rpc)
[\`osmosis.txfees.v1beta1.denomPoolId()\` RPC](#osmosistxfeesv1beta1denompoolid-rpc)
[\`osmosis.txfees.v1beta1.baseDenom()\` RPC](#osmosistxfeesv1beta1basedenom-rpc)

### \`osmosis.claim.v1beta1\` RPC

##### \`osmosis.claim.v1beta1.moduleAccountBalance()\` RPC
        
ModuleAccountBalance

\`\`\`js
/** ModuleAccountBalance */
const request: QueryModuleAccountBalanceRequest;
const result = await osmosis.claim.v1beta1.moduleAccountBalance(request);
\`\`\`

##### \`osmosis.claim.v1beta1.params()\` RPC
        
Params

\`\`\`js
/** Params */
const request: QueryParamsRequest;
const result = await osmosis.claim.v1beta1.params(request);
\`\`\`

##### \`osmosis.claim.v1beta1.claimRecord()\` RPC
        
ClaimRecord

\`\`\`js
/** ClaimRecord */
const request: QueryClaimRecordRequest;
const result = await osmosis.claim.v1beta1.claimRecord(request);
\`\`\`

##### \`osmosis.claim.v1beta1.claimableForAction()\` RPC
        
ClaimableForAction

\`\`\`js
/** ClaimableForAction */
const request: QueryClaimableForActionRequest;
const result = await osmosis.claim.v1beta1.claimableForAction(request);
\`\`\`

##### \`osmosis.claim.v1beta1.totalClaimable()\` RPC
        
TotalClaimable

\`\`\`js
/** TotalClaimable */
const request: QueryTotalClaimableRequest;
const result = await osmosis.claim.v1beta1.totalClaimable(request);
\`\`\`

##### \`osmosis.epochs.v1beta1.epochInfos()\` RPC
        
EpochInfos

\`\`\`js
/** EpochInfos provide running epochInfos */
const request: QueryEpochsInfoRequest;
const result = await osmosis.epochs.v1beta1.epochInfos(request);
\`\`\`

##### \`osmosis.epochs.v1beta1.currentEpoch()\` RPC
        
CurrentEpoch

\`\`\`js
/** CurrentEpoch provide current epoch of specified identifier */
const request: QueryCurrentEpochRequest;
const result = await osmosis.epochs.v1beta1.currentEpoch(request);
\`\`\`

##### \`osmosis.gamm.v1beta1.pools()\` RPC
        
Pools

\`\`\`js
/** Pools */
const request: QueryPoolsRequest;
const result = await osmosis.gamm.v1beta1.pools(request);
\`\`\`

##### \`osmosis.gamm.v1beta1.numPools()\` RPC
        
NumPools

\`\`\`js
/** NumPools */
const request: QueryNumPoolsRequest;
const result = await osmosis.gamm.v1beta1.numPools(request);
\`\`\`

##### \`osmosis.gamm.v1beta1.totalLiquidity()\` RPC
        
TotalLiquidity

\`\`\`js
/** TotalLiquidity */
const request: QueryTotalLiquidityRequest;
const result = await osmosis.gamm.v1beta1.totalLiquidity(request);
\`\`\`

##### \`osmosis.gamm.v1beta1.pool()\` RPC
        
Pool

\`\`\`js
/** Per Pool gRPC Endpoints */
const request: QueryPoolRequest;
const result = await osmosis.gamm.v1beta1.pool(request);
\`\`\`

##### \`osmosis.gamm.v1beta1.poolParams()\` RPC
        
PoolParams

\`\`\`js
/** PoolParams */
const request: QueryPoolParamsRequest;
const result = await osmosis.gamm.v1beta1.poolParams(request);
\`\`\`

##### \`osmosis.gamm.v1beta1.totalPoolLiquidity()\` RPC
        
TotalPoolLiquidity

\`\`\`js
/** TotalPoolLiquidity */
const request: QueryTotalPoolLiquidityRequest;
const result = await osmosis.gamm.v1beta1.totalPoolLiquidity(request);
\`\`\`

##### \`osmosis.gamm.v1beta1.totalShares()\` RPC
        
TotalShares

\`\`\`js
/** TotalShares */
const request: QueryTotalSharesRequest;
const result = await osmosis.gamm.v1beta1.totalShares(request);
\`\`\`

##### \`osmosis.gamm.v1beta1.spotPrice()\` RPC
        
SpotPrice

\`\`\`js
/**
 * SpotPrice defines a gRPC query handler that returns the spot price given
 * a base denomination and a quote denomination.
 */
const request: QuerySpotPriceRequest;
const result = await osmosis.gamm.v1beta1.spotPrice(request);
\`\`\`

##### \`osmosis.gamm.v1beta1.estimateSwapExactAmountIn()\` RPC
        
EstimateSwapExactAmountIn

\`\`\`js
/** Estimate the swap. */
const request: QuerySwapExactAmountInRequest;
const result = await osmosis.gamm.v1beta1.estimateSwapExactAmountIn(request);
\`\`\`

##### \`osmosis.gamm.v1beta1.estimateSwapExactAmountOut()\` RPC
        
EstimateSwapExactAmountOut

\`\`\`js
/** EstimateSwapExactAmountOut */
const request: QuerySwapExactAmountOutRequest;
const result = await osmosis.gamm.v1beta1.estimateSwapExactAmountOut(request);
\`\`\`

##### \`osmosis.incentives.moduleToDistributeCoins()\` RPC
        
ModuleToDistributeCoins

\`\`\`js
/** returns coins that is going to be distributed */
const request: ModuleToDistributeCoinsRequest;
const result = await osmosis.incentives.moduleToDistributeCoins(request);
\`\`\`

##### \`osmosis.incentives.moduleDistributedCoins()\` RPC
        
ModuleDistributedCoins

\`\`\`js
/** returns coins that are distributed by module so far */
const request: ModuleDistributedCoinsRequest;
const result = await osmosis.incentives.moduleDistributedCoins(request);
\`\`\`

##### \`osmosis.incentives.gaugeByID()\` RPC
        
GaugeByID

\`\`\`js
/** returns Gauge by id */
const request: GaugeByIDRequest;
const result = await osmosis.incentives.gaugeByID(request);
\`\`\`

##### \`osmosis.incentives.gauges()\` RPC
        
Gauges

\`\`\`js
/** returns gauges both upcoming and active */
const request: GaugesRequest;
const result = await osmosis.incentives.gauges(request);
\`\`\`

##### \`osmosis.incentives.activeGauges()\` RPC
        
ActiveGauges

\`\`\`js
/** returns active gauges */
const request: ActiveGaugesRequest;
const result = await osmosis.incentives.activeGauges(request);
\`\`\`

##### \`osmosis.incentives.activeGaugesPerDenom()\` RPC
        
ActiveGaugesPerDenom

\`\`\`js
/** returns active gauges per denom */
const request: ActiveGaugesPerDenomRequest;
const result = await osmosis.incentives.activeGaugesPerDenom(request);
\`\`\`

##### \`osmosis.incentives.upcomingGauges()\` RPC
        
UpcomingGauges

\`\`\`js
/** returns scheduled gauges */
const request: UpcomingGaugesRequest;
const result = await osmosis.incentives.upcomingGauges(request);
\`\`\`

##### \`osmosis.incentives.upcomingGaugesPerDenom()\` RPC
        
UpcomingGaugesPerDenom

\`\`\`js
/** returns scheduled gauges per denom */
const request: UpcomingGaugesPerDenomRequest;
const result = await osmosis.incentives.upcomingGaugesPerDenom(request);
\`\`\`

##### \`osmosis.incentives.rewardsEst()\` RPC
        
RewardsEst

\`\`\`js
/**
 * RewardsEst returns an estimate of the rewards at a future specific time.
 * The querier either provides an address or a set of locks
 * for which they want to find the associated rewards.
 */
const request: RewardsEstRequest;
const result = await osmosis.incentives.rewardsEst(request);
\`\`\`

##### \`osmosis.incentives.lockableDurations()\` RPC
        
LockableDurations

\`\`\`js
/** returns lockable durations that are valid to give incentives */
const request: QueryLockableDurationsRequest;
const result = await osmosis.incentives.lockableDurations(request);
\`\`\`

##### \`osmosis.lockup.moduleBalance()\` RPC
        
ModuleBalance

\`\`\`js
/** Return full balance of the module */
const request: ModuleBalanceRequest;
const result = await osmosis.lockup.moduleBalance(request);
\`\`\`

##### \`osmosis.lockup.moduleLockedAmount()\` RPC
        
ModuleLockedAmount

\`\`\`js
/** Return locked balance of the module */
const request: ModuleLockedAmountRequest;
const result = await osmosis.lockup.moduleLockedAmount(request);
\`\`\`

##### \`osmosis.lockup.accountUnlockableCoins()\` RPC
        
AccountUnlockableCoins

\`\`\`js
/** Returns unlockable coins which are not withdrawn yet */
const request: AccountUnlockableCoinsRequest;
const result = await osmosis.lockup.accountUnlockableCoins(request);
\`\`\`

##### \`osmosis.lockup.accountUnlockingCoins()\` RPC
        
AccountUnlockingCoins

\`\`\`js
/** Returns unlocking coins */
const request: AccountUnlockingCoinsRequest;
const result = await osmosis.lockup.accountUnlockingCoins(request);
\`\`\`

##### \`osmosis.lockup.accountLockedCoins()\` RPC
        
AccountLockedCoins

\`\`\`js
/** Return a locked coins that can't be withdrawn */
const request: AccountLockedCoinsRequest;
const result = await osmosis.lockup.accountLockedCoins(request);
\`\`\`

##### \`osmosis.lockup.accountLockedPastTime()\` RPC
        
AccountLockedPastTime

\`\`\`js
/** Returns locked records of an account with unlock time beyond timestamp */
const request: AccountLockedPastTimeRequest;
const result = await osmosis.lockup.accountLockedPastTime(request);
\`\`\`

##### \`osmosis.lockup.accountLockedPastTimeNotUnlockingOnly()\` RPC
        
AccountLockedPastTimeNotUnlockingOnly

\`\`\`js
/**
 * Returns locked records of an account with unlock time beyond timestamp
 * excluding tokens started unlocking
 */
const request: AccountLockedPastTimeNotUnlockingOnlyRequest;
const result = await osmosis.lockup.accountLockedPastTimeNotUnlockingOnly(request);
\`\`\`

##### \`osmosis.lockup.accountUnlockedBeforeTime()\` RPC
        
AccountUnlockedBeforeTime

\`\`\`js
/** Returns unlocked records with unlock time before timestamp */
const request: AccountUnlockedBeforeTimeRequest;
const result = await osmosis.lockup.accountUnlockedBeforeTime(request);
\`\`\`

##### \`osmosis.lockup.accountLockedPastTimeDenom()\` RPC
        
AccountLockedPastTimeDenom

\`\`\`js
/** Returns lock records by address, timestamp, denom */
const request: AccountLockedPastTimeDenomRequest;
const result = await osmosis.lockup.accountLockedPastTimeDenom(request);
\`\`\`

##### \`osmosis.lockup.lockedDenom()\` RPC
        
LockedDenom

\`\`\`js
/** Returns total locked per denom with longer past given time */
const request: LockedDenomRequest;
const result = await osmosis.lockup.lockedDenom(request);
\`\`\`

##### \`osmosis.lockup.lockedByID()\` RPC
        
LockedByID

\`\`\`js
/** Returns lock record by id */
const request: LockedRequest;
const result = await osmosis.lockup.lockedByID(request);
\`\`\`

##### \`osmosis.lockup.syntheticLockupsByLockupID()\` RPC
        
SyntheticLockupsByLockupID

\`\`\`js
/** Returns synthetic lockups by native lockup id */
const request: SyntheticLockupsByLockupIDRequest;
const result = await osmosis.lockup.syntheticLockupsByLockupID(request);
\`\`\`

##### \`osmosis.lockup.accountLockedLongerDuration()\` RPC
        
AccountLockedLongerDuration

\`\`\`js
/** Returns account locked records with longer duration */
const request: AccountLockedLongerDurationRequest;
const result = await osmosis.lockup.accountLockedLongerDuration(request);
\`\`\`

##### \`osmosis.lockup.accountLockedDuration()\` RPC
        
AccountLockedDuration

\`\`\`js
/** Returns account locked records with a specific duration */
const request: AccountLockedDurationRequest;
const result = await osmosis.lockup.accountLockedDuration(request);
\`\`\`

##### \`osmosis.lockup.accountLockedLongerDurationNotUnlockingOnly()\` RPC
        
AccountLockedLongerDurationNotUnlockingOnly

\`\`\`js
/**
 * Returns account locked records with longer duration excluding tokens
 * started unlocking
 */
const request: AccountLockedLongerDurationNotUnlockingOnlyRequest;
const result = await osmosis.lockup.accountLockedLongerDurationNotUnlockingOnly(request);
\`\`\`

##### \`osmosis.lockup.accountLockedLongerDurationDenom()\` RPC
        
AccountLockedLongerDurationDenom

\`\`\`js
/** Returns account's locked records for a denom with longer duration */
const request: AccountLockedLongerDurationDenomRequest;
const result = await osmosis.lockup.accountLockedLongerDurationDenom(request);
\`\`\`

##### \`osmosis.mint.v1beta1.params()\` RPC
        
Params

\`\`\`js
/** Params returns the total set of minting parameters. */
const request: QueryParamsRequest;
const result = await osmosis.mint.v1beta1.params(request);
\`\`\`

##### \`osmosis.mint.v1beta1.epochProvisions()\` RPC
        
EpochProvisions

\`\`\`js
/** EpochProvisions current minting epoch provisions value. */
const request: QueryEpochProvisionsRequest;
const result = await osmosis.mint.v1beta1.epochProvisions(request);
\`\`\`

##### \`osmosis.poolincentives.v1beta1.gaugeIds()\` RPC
        
GaugeIds

\`\`\`js
/** GaugeIds takes the pool id and returns the matching gauge ids and durations */
const request: QueryGaugeIdsRequest;
const result = await osmosis.poolincentives.v1beta1.gaugeIds(request);
\`\`\`

##### \`osmosis.poolincentives.v1beta1.distrInfo()\` RPC
        
DistrInfo

\`\`\`js
/** DistrInfo */
const request: QueryDistrInfoRequest;
const result = await osmosis.poolincentives.v1beta1.distrInfo(request);
\`\`\`

##### \`osmosis.poolincentives.v1beta1.params()\` RPC
        
Params

\`\`\`js
/** Params */
const request: QueryParamsRequest;
const result = await osmosis.poolincentives.v1beta1.params(request);
\`\`\`

##### \`osmosis.poolincentives.v1beta1.lockableDurations()\` RPC
        
LockableDurations

\`\`\`js
/** LockableDurations */
const request: QueryLockableDurationsRequest;
const result = await osmosis.poolincentives.v1beta1.lockableDurations(request);
\`\`\`

##### \`osmosis.poolincentives.v1beta1.incentivizedPools()\` RPC
        
IncentivizedPools

\`\`\`js
/** IncentivizedPools */
const request: QueryIncentivizedPoolsRequest;
const result = await osmosis.poolincentives.v1beta1.incentivizedPools(request);
\`\`\`

##### \`osmosis.poolincentives.v1beta1.externalIncentiveGauges()\` RPC
        
ExternalIncentiveGauges

\`\`\`js
/** ExternalIncentiveGauges */
const request: QueryExternalIncentiveGaugesRequest;
const result = await osmosis.poolincentives.v1beta1.externalIncentiveGauges(request);
\`\`\`

##### \`osmosis.superfluid.params()\` RPC
        
Params

\`\`\`js
/** Params returns the total set of minting parameters. */
const request: QueryParamsRequest;
const result = await osmosis.superfluid.params(request);
\`\`\`

##### \`osmosis.superfluid.assetType()\` RPC
        
AssetType

\`\`\`js
/** Returns superfluid asset type */
const request: AssetTypeRequest;
const result = await osmosis.superfluid.assetType(request);
\`\`\`

##### \`osmosis.superfluid.allAssets()\` RPC
        
AllAssets

\`\`\`js
/** Returns all superfluid asset types */
const request: AllAssetsRequest;
const result = await osmosis.superfluid.allAssets(request);
\`\`\`

##### \`osmosis.superfluid.assetMultiplier()\` RPC
        
AssetMultiplier

\`\`\`js
/** Returns superfluid asset Multiplier */
const request: AssetMultiplierRequest;
const result = await osmosis.superfluid.assetMultiplier(request);
\`\`\`

##### \`osmosis.superfluid.allIntermediaryAccounts()\` RPC
        
AllIntermediaryAccounts

\`\`\`js
/** Returns all superfluid intermediary account */
const request: AllIntermediaryAccountsRequest;
const result = await osmosis.superfluid.allIntermediaryAccounts(request);
\`\`\`

##### \`osmosis.superfluid.connectedIntermediaryAccount()\` RPC
        
ConnectedIntermediaryAccount

\`\`\`js
/** Returns intermediary account connected to a superfluid staked lock by id */
const request: ConnectedIntermediaryAccountRequest;
const result = await osmosis.superfluid.connectedIntermediaryAccount(request);
\`\`\`

##### \`osmosis.superfluid.totalSuperfluidDelegations()\` RPC
        
TotalSuperfluidDelegations

\`\`\`js
/**
 * Returns the total amount of osmo superfluidly staked
 * response denominated in uosmo
 */
const request: TotalSuperfluidDelegationsRequest;
const result = await osmosis.superfluid.totalSuperfluidDelegations(request);
\`\`\`

##### \`osmosis.superfluid.superfluidDelegationAmount()\` RPC
        
SuperfluidDelegationAmount

\`\`\`js
/**
 * Returns the coins superfluid delegated for a delegator, validator, denom
 * triplet
 */
const request: SuperfluidDelegationAmountRequest;
const result = await osmosis.superfluid.superfluidDelegationAmount(request);
\`\`\`

##### \`osmosis.superfluid.superfluidDelegationsByDelegator()\` RPC
        
SuperfluidDelegationsByDelegator

\`\`\`js
/** Returns all the superfluid poistions for a specific delegator */
const request: SuperfluidDelegationsByDelegatorRequest;
const result = await osmosis.superfluid.superfluidDelegationsByDelegator(request);
\`\`\`

##### \`osmosis.superfluid.superfluidUndelegationsByDelegator()\` RPC
        
SuperfluidUndelegationsByDelegator

\`\`\`js
/** SuperfluidUndelegationsByDelegator */
const request: SuperfluidUndelegationsByDelegatorRequest;
const result = await osmosis.superfluid.superfluidUndelegationsByDelegator(request);
\`\`\`

##### \`osmosis.superfluid.superfluidDelegationsByValidatorDenom()\` RPC
        
SuperfluidDelegationsByValidatorDenom

\`\`\`js
/**
 * Returns all the superfluid positions of a specific denom delegated to one
 * validator
 */
const request: SuperfluidDelegationsByValidatorDenomRequest;
const result = await osmosis.superfluid.superfluidDelegationsByValidatorDenom(request);
\`\`\`

##### \`osmosis.superfluid.estimateSuperfluidDelegatedAmountByValidatorDenom()\` RPC
        
EstimateSuperfluidDelegatedAmountByValidatorDenom

\`\`\`js
/**
 * Returns the amount of a specific denom delegated to a specific validator
 * This is labeled an estimate, because the way it calculates the amount can
 * lead rounding errors from the true delegated amount
 */
const request: EstimateSuperfluidDelegatedAmountByValidatorDenomRequest;
const result = await osmosis.superfluid.estimateSuperfluidDelegatedAmountByValidatorDenom(request);
\`\`\`

##### \`osmosis.tokenfactory.v1beta1.params()\` RPC
        
Params

\`\`\`js
/** Params returns the total set of minting parameters. */
const request: QueryParamsRequest;
const result = await osmosis.tokenfactory.v1beta1.params(request);
\`\`\`

##### \`osmosis.tokenfactory.v1beta1.denomAuthorityMetadata()\` RPC
        
DenomAuthorityMetadata

\`\`\`js
/** DenomAuthorityMetadata */
const request: QueryDenomAuthorityMetadataRequest;
const result = await osmosis.tokenfactory.v1beta1.denomAuthorityMetadata(request);
\`\`\`

##### \`osmosis.tokenfactory.v1beta1.denomsFromCreator()\` RPC
        
DenomsFromCreator

\`\`\`js
/** DenomsFromCreator */
const request: QueryDenomsFromCreatorRequest;
const result = await osmosis.tokenfactory.v1beta1.denomsFromCreator(request);
\`\`\`

##### \`osmosis.txfees.v1beta1.feeTokens()\` RPC
        
FeeTokens

\`\`\`js
/**
 * FeeTokens returns a list of all the whitelisted fee tokens and their
 * corresponding pools It does not include the BaseDenom, which has its own
 * query endpoint
 */
const request: QueryFeeTokensRequest;
const result = await osmosis.txfees.v1beta1.feeTokens(request);
\`\`\`

##### \`osmosis.txfees.v1beta1.denomSpotPrice()\` RPC
        
DenomSpotPrice

\`\`\`js
/** DenomSpotPrice */
const request: QueryDenomSpotPriceRequest;
const result = await osmosis.txfees.v1beta1.denomSpotPrice(request);
\`\`\`

##### \`osmosis.txfees.v1beta1.denomPoolId()\` RPC
        
DenomPoolId

\`\`\`js
/** DenomPoolId */
const request: QueryDenomPoolIdRequest;
const result = await osmosis.txfees.v1beta1.denomPoolId(request);
\`\`\`

##### \`osmosis.txfees.v1beta1.baseDenom()\` RPC
        
BaseDenom

\`\`\`js
/** BaseDenom */
const request: QueryBaseDenomRequest;
const result = await osmosis.txfees.v1beta1.baseDenom(request);
\`\`\`

"
`;

exports[`documentWithTypeUrl 1`] = `
"const {
  /** my comment */
  methodName
} = tendermint.yolo.db.MessageComposer.withTypeUrl;"
`;

exports[`documentWithTypeUrlReadme 1`] = `
"
#### \`tendermint.yolo.db\` messages

\`\`\`js
const {
  /** my comment */
  methodName
} = tendermint.yolo.db.MessageComposer.withTypeUrl;
\`\`\`
    "
`;
